--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="circle_1">#E7F0FF</color>
+    <color name="circle_2">#E0FFDD</color>
+    <color name="circle_3">#FCC9DC</color>
+    <color name="button_color">#000000</color>
+    <color name="text_color">#6B6B6B</color>
+    <color name="text_color2">#565656</color>
+
 </resources>
