--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -10,6 +10,7 @@
         android:id="@+id/singUp_circle_1"
         android:layout_width="460dp"
         android:layout_height="460dp"
+        app:srcCompat="@drawable/circle_3"
         android:layout_marginStart="93dp"
         android:layout_marginTop="336dp"
         android:layout_marginEnd="-125dp"
@@ -17,13 +18,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/circle_3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/singUp_circle_2"
         android:layout_width="460dp"
         android:layout_height="460dp"
+        app:srcCompat="@drawable/circle_3"
         android:layout_marginStart="-183dp"
         android:layout_marginTop="-253dp"
         android:layout_marginEnd="183dp"
@@ -31,8 +32,7 @@
         app:layout_constraintBottom_toBottomOf="@id/singUp_circle_1"
         app:layout_constraintEnd_toEndOf="@id/singUp_circle_1"
         app:layout_constraintStart_toStartOf="@id/singUp_circle_1"
-        app:layout_constraintTop_toTopOf="@id/singUp_circle_1"
-        app:srcCompat="@drawable/circle_3" />
+        app:layout_constraintTop_toTopOf="@id/singUp_circle_1" />
 
     <Button
         android:id="@+id/singUp_button"
@@ -50,101 +50,117 @@
         app:layout_constraintBottom_toBottomOf="@id/singUp_circle_1"
         app:layout_constraintTop_toTopOf="@id/singUp_circle_1" />
 
-    <EditText
-        android:id="@+id/create_password"
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+        android:id="@+id/create_password_layout"
         android:layout_width="349dp"
         android:layout_height="wrap_content"
+        app:startIconDrawable="@drawable/ic_key"
+        app:errorEnabled="true"
+        app:endIconMode="password_toggle"
         android:layout_marginStart="-51dp"
         android:layout_marginTop="206dp"
         android:layout_marginEnd="178dp"
         android:layout_marginBottom="223dp"
-        android:ems="10"
-        android:hint="@string/create_password"
-        android:inputType="textPassword"
-        android:paddingStart="14dp"
-        android:paddingBottom="40dp"
-        android:textColor="@color/text_color"
-        android:textColorHint="@color/text_color"
-        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="@id/singUp_circle_1"
         app:layout_constraintEnd_toEndOf="@id/singUp_circle_1"
         app:layout_constraintStart_toStartOf="@id/singUp_circle_1"
         app:layout_constraintTop_toTopOf="@id/singUp_circle_1"
-        tools:ignore="RtlSymmetry" />
+        >
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/create_password_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:inputType="textPassword"
+            android:hint="@string/create_password"
+            android:textSize="26sp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <EditText
-        android:id="@+id/create_username"
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+        android:id="@+id/create_username_layout"
         android:layout_width="349dp"
         android:layout_height="wrap_content"
+        app:startIconDrawable="@drawable/ic_person"
+        app:errorEnabled="true"
+        app:endIconMode="clear_text"
         android:layout_marginStart="129dp"
         android:layout_marginTop="321dp"
         android:layout_marginEnd="2dp"
         android:layout_marginBottom="108dp"
-        android:ems="10"
-        android:hint="@string/create_username"
-        android:inputType="textPersonName"
-        android:paddingStart="14dp"
-        android:paddingBottom="40dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/text_color"
-        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="@id/singUp_circle_2"
         app:layout_constraintEnd_toEndOf="@id/singUp_circle_2"
         app:layout_constraintStart_toStartOf="@id/singUp_circle_2"
         app:layout_constraintTop_toTopOf="@id/singUp_circle_2"
-        tools:ignore="RtlSymmetry" />
+        >
 
-    <EditText
-        android:id="@+id/enter_email"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/create_username_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:inputType="textPersonName"
+            android:hint="@string/create_username"
+            android:textSize="26sp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+        android:id="@+id/enter_email_layout"
         android:layout_width="349dp"
         android:layout_height="wrap_content"
+        app:startIconDrawable="@drawable/ic_mail"
+        app:errorEnabled="true"
+        app:endIconMode="clear_text"
         android:layout_marginStart="129dp"
         android:layout_marginTop="197dp"
         android:layout_marginEnd="2dp"
         android:layout_marginBottom="232dp"
-        android:ems="10"
-        android:hint="@string/enter_email_id"
-        android:inputType="textEmailAddress"
-        android:paddingStart="14dp"
-        android:paddingBottom="40dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/text_color"
-        android:textSize="26sp"
         app:layout_constraintBottom_toBottomOf="@id/singUp_circle_2"
         app:layout_constraintEnd_toEndOf="@id/singUp_circle_2"
         app:layout_constraintStart_toStartOf="@id/singUp_circle_2"
         app:layout_constraintTop_toTopOf="@id/singUp_circle_2"
-        tools:ignore="RtlSymmetry" />
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/enter_email_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:inputType="textEmailAddress"
+            android:hint="@string/enter_email_id"
+            android:textSize="26sp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/singUp_text"
         android:layout_width="241dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="115dp"
-        android:layout_marginTop="37dp"
-        android:layout_marginEnd="104dp"
-        android:layout_marginBottom="361dp"
         android:fontFamily="@font/inter_bold"
         android:gravity="center_vertical"
         android:text="@string/create_account"
         android:textColor="@color/black"
         android:textSize="32sp"
         android:textStyle="bold"
+        android:layout_marginStart="115dp"
+        android:layout_marginTop="37dp"
+        android:layout_marginEnd="104dp"
+        android:layout_marginBottom="361dp"
         app:layout_constraintBottom_toBottomOf="@id/singUp_circle_2"
         app:layout_constraintEnd_toEndOf="@id/singUp_circle_2"
         app:layout_constraintStart_toStartOf="@id/singUp_circle_2"
         app:layout_constraintTop_toTopOf="@id/singUp_circle_2" />
 
-    <ImageButton
+    <Button
         android:id="@+id/singUp_back_button"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        style="@style/MyBackButtonStyle"
+        android:paddingStart="12dp"
         android:layout_marginStart="21dp"
         android:layout_marginTop="27dp"
         android:layout_marginEnd="359dp"
         android:layout_marginBottom="45dp"
-        style="@style/MyBackButtonStyle"
         app:layout_constraintBottom_toTopOf="@id/singUp_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
