--- a/app/src/main/res/drawable/circle_1.xml
+++ b/app/src/main/res/drawable/circle_1.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid
-        android:color="@color/circle_1"></solid>
+        android:color="@color/circle_1">
+    </solid>
 
 </shape>
