--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -28,7 +28,21 @@
 
     <style name="MyBackButtonStyle" parent="Widget.MaterialComponents.Button">
         <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.MyApp.Button.Rounded</item>
-        <item name="srcCompat">@drawable/back_button_picture</item>
+        <item name="backgroundTint">@color/back_button_background</item>
+        <item name="icon">@drawable/ic_back_button</item>
+        <item name="iconTint">@color/back_icon_color</item>
+        <item name="iconStartPadding">12dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_width">40dp</item>
+    </style>
+
+    <style name="MyButtonStyle2" parent="">
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@color/text_color2</item>
+        <item name="fontFamily">@font/inter</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
     </style>
 
 </resources>
