--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,7 @@
     <color name="button_color">#000000</color>
     <color name="text_color">#6B6B6B</color>
     <color name="text_color2">#565656</color>
+    <color name="back_button_background">#D9D9D9</color>
+    <color name="back_icon_color">#8E8E8E</color>
 
 </resources>
