--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -6,11 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".SingUpActivity">
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/singUp_circle_1"
+        app:shapeAppearanceOverlay="@style/CircularView"
         android:layout_width="460dp"
         android:layout_height="460dp"
-        app:srcCompat="@drawable/circle_3"
+        app:srcCompat="@color/circle_3"
         android:layout_marginStart="93dp"
         android:layout_marginTop="336dp"
         android:layout_marginEnd="-125dp"
@@ -20,11 +21,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/singUp_circle_2"
+        app:shapeAppearanceOverlay="@style/CircularView"
         android:layout_width="460dp"
         android:layout_height="460dp"
-        app:srcCompat="@drawable/circle_3"
+        app:srcCompat="@color/circle_3"
         android:layout_marginStart="-183dp"
         android:layout_marginTop="-253dp"
         android:layout_marginEnd="183dp"
@@ -36,6 +38,7 @@
 
     <Button
         android:id="@+id/singUp_button"
+        app:shapeAppearanceOverlay="@style/MyButtonStyle"
         android:layout_width="229dp"
         android:layout_height="wrap_content"
         style="@style/MyButtonStyle"
@@ -51,8 +54,8 @@
         app:layout_constraintTop_toTopOf="@id/singUp_circle_1" />
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:id="@+id/create_password_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="349dp"
         android:layout_height="wrap_content"
         app:startIconDrawable="@drawable/ic_key"
@@ -79,8 +82,8 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:id="@+id/create_username_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="349dp"
         android:layout_height="wrap_content"
         app:startIconDrawable="@drawable/ic_person"
@@ -107,8 +110,8 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:id="@+id/enter_email_layout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="349dp"
         android:layout_height="wrap_content"
         app:startIconDrawable="@drawable/ic_mail"
@@ -155,6 +158,7 @@
 
     <Button
         android:id="@+id/singUp_back_button"
+        app:shapeAppearanceOverlay="@style/MyBackButtonStyle"
         style="@style/MyBackButtonStyle"
         android:paddingStart="12dp"
         android:layout_marginStart="21dp"
@@ -164,8 +168,7 @@
         app:layout_constraintBottom_toTopOf="@id/singUp_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
