--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,27 +13,22 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="MyButtonStyle" parent="Widget.MaterialComponents.Button">
-        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.MyApp.Button.Rounded</item>
+    <style name="MyButtonStyle" parent="">
         <item name="android:textSize">36dp</item>
         <item name="android:gravity">center</item>
         <item name="fontFamily">@font/inder</item>
         <item name="backgroundTint">@color/button_color</item>
+        <item name="cornerSize">50%</item>
     </style>
 
-    <style name="ShapeAppearanceOverlay.MyApp.Button.Rounded" parent="">
-        <item name="cornerFamily">rounded</item>
-        <item name="cornerSize">50dp</item>
-    </style>
-
-    <style name="MyBackButtonStyle" parent="Widget.MaterialComponents.Button">
-        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.MyApp.Button.Rounded</item>
+    <style name="MyBackButtonStyle" parent="">
         <item name="backgroundTint">@color/back_button_background</item>
         <item name="icon">@drawable/ic_back_button</item>
         <item name="iconTint">@color/back_icon_color</item>
         <item name="iconStartPadding">12dp</item>
         <item name="android:layout_height">50dp</item>
         <item name="android:layout_width">40dp</item>
+        <item name="cornerSize">50%</item>
     </style>
 
     <style name="MyButtonStyle2" parent="">
@@ -43,6 +38,10 @@
         <item name="textAllCaps">false</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
+    </style>
+
+    <style name="CircularView" parent="">
+        <item name="cornerSize">50%</item>
     </style>
 
 </resources>
