--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -78,6 +78,8 @@
             android:background="@android:color/transparent"
             android:inputType="textPassword"
             android:hint="@string/create_password"
+            android:textColor="@color/text_color"
+            android:textColorHint="@color/text_color"
             android:textSize="26sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -106,6 +108,8 @@
             android:background="@android:color/transparent"
             android:inputType="textPersonName"
             android:hint="@string/create_username"
+            android:textColor="@color/text_color"
+            android:textColorHint="@color/text_color"
             android:textSize="26sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -134,6 +138,8 @@
             android:background="@android:color/transparent"
             android:inputType="textEmailAddress"
             android:hint="@string/enter_email_id"
+            android:textColor="@color/text_color"
+            android:textColorHint="@color/text_color"
             android:textSize="26sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
