--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,6 +15,7 @@
 
     <style name="MyButtonStyle" parent="">
         <item name="android:textSize">36dp</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:gravity">center</item>
         <item name="fontFamily">@font/inder</item>
         <item name="backgroundTint">@color/button_color</item>
