--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toTopOf="@id/login_circle_1"/>
 
     <Button
-        android:id="@+id/login_text_1"
+        android:id="@+id/login_new_account"
         style="@style/MyButtonStyle2"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toTopOf="@id/login_circle_1" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/login_text_2"
+        android:id="@+id/login_forgotten_password"
         style="@style/MyButtonStyle2"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
@@ -92,7 +92,6 @@
         android:layout_height="wrap_content"
         app:startIconDrawable="@drawable/ic_key"
         app:errorEnabled="true"
-        app:endIconMode="password_toggle"
         android:layout_marginStart="64dp"
         android:layout_marginEnd="47dp"
         android:layout_marginBottom="425dp"
@@ -147,7 +146,7 @@
         android:id="@+id/login_text_3"
         android:layout_width="338dp"
         android:layout_height="61dp"
-        android:fontFamily="@font/inter_semibold"
+        android:fontFamily="@font/inter_semi_bold"
         android:gravity="center_vertical"
         android:text="@string/enter_your_username_password"
         android:textColor="@color/text_color2"
@@ -193,6 +192,7 @@
         app:layout_constraintBottom_toTopOf="@id/login_text_4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
