--- a/app/src/main/res/layout/activity_sing_up.xml
+++ b/app/src/main/res/layout/activity_sing_up.xml
@@ -60,7 +60,6 @@
         android:layout_height="wrap_content"
         app:startIconDrawable="@drawable/ic_key"
         app:errorEnabled="true"
-        app:endIconMode="password_toggle"
         android:layout_marginStart="-51dp"
         android:layout_marginTop="206dp"
         android:layout_marginEnd="178dp"
@@ -174,7 +173,8 @@
         app:layout_constraintBottom_toTopOf="@id/singUp_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlSymmetry" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
