--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,8 +4,8 @@
         <item>@font/inder</item>
         <item>@font/inter</item>
         <item>@font/inter_bold</item>
-        <item>@font/inter_extrabold</item>
+        <item>@font/inter_extra_bold</item>
         <item>@font/inter_medium</item>
-        <item>@font/inter_semibold</item>
+        <item>@font/inter_semi_bold</item>
     </array>
 </resources>
